# OpenGL

Example - OpenGL Triangle/Dependencies/CMAKE/: CMakeLists.txt  CMakePresets.json
Example - OpenGL Triangle/Dependencies/Include/glad/: glad.h
Example - OpenGL Triangle/Dependencies/Libraries/: glad.c
Example - OpenGL Triangle/Source/: Main.cpp
FromVictorGordan/: CMakeLists.txt
FromVictorGordan/Src/: Main.cpp
FromVictorGordan/Src/Glad/include/glad/: glad.h
FromVictorGordan/Src/Glad/src/: glad.c
